# embedding_gateway

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.cpu.yml  docker-compose.yml  setup-wsl-docker.sh
scripts/: benchmark.py  benchmark_result.json  health-check.sh  prefetch-tei-models.sh  pull-models.sh  pull-ollama-models.sh  start-all.sh
src/embedding_gateway/: config.py  health.py  main.py  models.py  registry.py  router.py
src/embedding_gateway/backends/: base.py  ollama.py  tei.py  vllm.py
src/embedding_gateway/static/: playground.html
tests/: conftest.py  test_gateway.py  test_health.py
